// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    17020,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 17020,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    4077,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4077,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): errors 1`] = `Array []`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): warnings 1`] = `Array []`;

exports[`"compressionOptions" option matches snapshot without values: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    17020,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 17020,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    4077,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4077,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot without values: errors 1`] = `Array []`;

exports[`"compressionOptions" option matches snapshot without values: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    146,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 146,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    17020,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 17020,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    3574,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3574,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "deflateed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    381,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 381,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "deflateed": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    167,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 167,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    17020,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "deflateed": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 17020,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    4065,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4065,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "deflateRawed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    375,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 375,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "deflateRawed": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    161,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 161,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    17020,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "deflateRawed": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 17020,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    4059,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4059,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: warnings 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js",
    265,
    Object {
      "chunkhash": "9325220d444b0d653c03",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.9325220d444b0d653c03.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "async.async.9325220d444b0d653c03.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js",
    17020,
    Object {
      "chunkhash": "a6299e4b54bcb458b330",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.a6299e4b54bcb458b330.js.gz",
      },
      "size": 17020,
    },
  ],
  Array [
    "main.a6299e4b54bcb458b330.js.gz",
    4077,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4077,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: errors 1`] = `Array []`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: warnings 1`] = `Array []`;
